add and implement user characteristics

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -37,7 +37,10 @@
   \chapter{Overall Description}
   \section{Product perspective}
   \input{Sections/2-Overall_Description/Product_perspective.tex}
-  
+  \section{User Characteristics}
+  \input{Sections/2-Overall_Description/User_characteristics.tex}
+  \section{Constraints}
+  \input{Sections/2-Overall_Description/Constraints.tex}
 
 \end{document}
   
