Writing of scope paragraph

--- a/RASD/Sections/1-Introduction/Scope.tex
+++ b/RASD/Sections/1-Introduction/Scope.tex
@@ -1,2 +1,7 @@
-\subsection{Description of the given problem
-}
+\subsection{Description of the given problem}
+SafeStreets is a service that aims to improve the safety of the streets via the help of the users. They can notify violations or any illegal behaviour related to driving to authorities. In particular users can iteract with the service via an application that can be used to send the violation reports; the latters mainly consist in a picture, taken by the user, of the vehicle responsible of the violation, moreover users can send along with the picture location, date and additional information related to the infringement. The application is connected to a backend service that saves and handles all the notifications and interacts with some third party services used by the system. Furthermore the backend system provides a WebApp that can be used by the authorities in order to check the violations recieved. It's important to note that the picture sent by the user must contain the car plate in order to let the police officers know which is the real vehicle that committed the violation.
+
+% TODO: add the "highlight street" part and advanced function description
+
+% TODO: maybe move backend explanation part to section "Product perspective"
+
