add constraints and assumptions intro

--- a/RASD/Sections/2-Overall_Description/Constraints.tex
+++ b/RASD/Sections/2-Overall_Description/Constraints.tex
@@ -1,3 +1,27 @@
 \subsection{Regulatory policies}
+The user information is stored accordingly to the GDPR policies in order to guarantee the privacy of individuals.
+\begin{itemize}
+    \item No data is shared with third parties for commercial purposes;
+    \item All reported images and violation data are stored safely through encryption methods. The third party system used for image recognition can not store any information/image which identifies;
+    \item Any additional information, such as GPS position or Camera access, is promptly asked to the user before performing the specific operation, accordingly to the Android/IOS standards.
+\end{itemize}
+
+
 \subsection{Hardware limitations}
+\begin{itemize}
+    \item Mobile applications:
+    \begin{itemize}
+        \item Any kind of modern smartphone;
+        \item Internet connectivity;
+        \item Camera;
+        \item GPS.
+    \end{itemize}
+    \item Web application:
+    \begin{itemize}
+        \item Browser (any HTTP client);
+        \item Internet connectivity.
+    \end{itemize}
+\end{itemize}
 \subsection{Interface to other applications}
+A certified external image recognition service deals with the car plate recognition through report's images.\newline
+Report's information are stored in a cloud database which guarantees data encryption and information retrieving through authentication.
