--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -41,6 +41,8 @@
   \input{Sections/2-Overall_Description/User_characteristics.tex}
   \section{Constraints}
   \input{Sections/2-Overall_Description/Constraints.tex}
+  \section{Assumptions and dependencies}
+  \input{Sections/2-Overall_Description/Assumptions_dependencies.tex}
 
 \end{document}
   
