Modified "Description of the given problem" , added "Current system" and started "Goals"

--- a/RASD/Sections/1-Introduction/Scope.tex
+++ b/RASD/Sections/1-Introduction/Scope.tex
@@ -1,7 +1,9 @@
 \subsection{Description of the given problem}
-SafeStreets is a service that aims to improve the safety of the streets via the help of the users. They can notify violations or any illegal behaviour related to driving to authorities. In particular users can iteract with the service via an application that can be used to send the violation reports; the latters mainly consist in a picture, taken by the user, of the vehicle responsible of the violation, moreover users can send along with the picture location, date and additional information related to the infringement. The application is connected to a backend service that saves and handles all the notifications and interacts with some third party services used by the system. Furthermore the backend system provides a WebApp that can be used by the authorities in order to check the violations recieved. It's important to note that the picture sent by the user must contain the car plate in order to let the police officers know which is the real vehicle that committed the violation.
+SafeStreets is a service that aims to improve the safety of the streets via the help of the users. They can notify violations or any illegal behaviour related to driving to authorities. In particular users can iteract with the service via an application that can be used to send the violation reports; the latters mainly consist in a picture, taken by the user, of the vehicle responsible of the violation, moreover users can send along with the picture location, date and additional information related to the infringement. The system also provides a Web interface that can be used by the authorities in order to check the violations recieved. It's important to note that the picture sent by the user must contain the car plate in order to let the police officers know which is the real vehicle that committed the violation. Another functionality of the application offers to both users and authorities the possibility to see areas/streets with the highest violations rates thanks to the data collected over time. As an advanced functionality the application can interact with services offered by the municipality; in particular if a service offers data related to accidents SafeStreets can cross this data with its own data in order to get a better idea of the potentially unsafe areas and therefore suggest some possible interventions. Ultimately the application will have to be scalable and easy to use in order to provide a fast and efficient utilization for users that see a violation and want to immediately report it.
 
-% TODO: add the "highlight street" part and advanced function description
+\subsection{Current system}
+SafeStreets is a new service that it's entering the market right now,so all the architecture will have to be built from scratch. There aren't any legacy systems that needs to be integrated into the application with the exception of the third party services that offers some functionality required by the application (like Maps and plate recognition), those services will be better explained in the following paragraphs.
 
-% TODO: maybe move backend explanation part to section "Product perspective"
 
+\subsection{Goals}
+\input{Sections/1-Introduction/Goals.tex}
