--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -1,23 +1,4 @@
-\documentclass[12pt]{report}
-% \usepackage{minted}
-\usepackage{xcolor}
-\definecolor{light-gray}{rgb}{0.9,0.9,0.9}
-% \usepackage{emptypage}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-\usepackage[utf8]{inputenc}
-% \usepackage[italian]{babel}
-\usepackage{graphicx}
-\graphicspath{ {immagini/} }
-\usepackage{caption}
-\usepackage{subcaption}
-
-\usepackage[a4paper,width=150mm,top=30mm,bottom=30mm,left=30mm,right=30mm,bindingoffset=6mm]{geometry}
-\usepackage{fancyhdr}
-\linespread{1.3}\selectfont
-
-\usepackage{titlesec}
-\titleformat{\chapter}{}{}{0em}{\bf\LARGE}
+\input{config.tex}
 
 \begin{document}
     
@@ -46,3 +27,4 @@
 
 \end{document}
   
+
