--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -18,12 +18,16 @@
   \input{Sections/1-Introduction/Definitions_acronyms_abbreviations.tex}
   \section{References}
   \input{Sections/1-Introduction/References.tex}
+  \section{Revision History}
+  \input{Sections/1-Introduction/Revision_history.tex}
   \section{Overview}
   \input{Sections/1-Introduction/Overview.tex}
   
   \chapter{Overall Description}
   \section{Product perspective}
   \input{Sections/2-Overall_Description/Product_perspective.tex}
+  \section{Product Functions}
+  \input{Sections/2-Overall_Description/Product_functions.tex}
   \section{User Characteristics}
   \input{Sections/2-Overall_Description/User_characteristics.tex}
   \section{Constraints}
