--- a/RASD/Sections/2-Overall_Description/Product_perspective.tex
+++ b/RASD/Sections/2-Overall_Description/Product_perspective.tex
@@ -1,4 +1,4 @@
 SafeStreets is a software that needs to be fast and reliable in order to allow the user to send a report immediately after he sees a violation, so our goal was to design an architecture that can offer a good level of performance with respect to scalability and portability. The decision that has been made was to divide the system into three separate applications: a mobile front-end application for the users, a Web application for the authorities and a back-end system that manages all the operations. More in detail, the user application is a light-weight crossplatform front-end mobile client; with this approach the client side is relieved from the computation and the result is a fast application for the user.
-With this mobile application the user can perform the main functions related to him, such as: registration, login, send reports, consult the history of his reports and watch a map with the MDS. The application is then connected to the backend service which is the part of the architecture that handles all the main operations regarding the elaboration of data. In fact the backend is the core of the architetcure, it manages the incoming request and handles the interaction with the third party system for the plate recognition, this is fundamental because the authorities need to receive the plate number in order to immediately identify the right veichle. This is done by sending the picture taken by the user to this external service that finds the plate number in the image and send it back to the system as a string. Moreover the backend provides an interface that interacts with the cloud-based database in which the data will be saved and ultimately it provides the functions to compute (on request) the MDS and other useful metrics. The Web application takes advantage of the interactions with the remote database offered by the backend to provide a simple interface for the authorities in order to let them consult all the data. Via this web interface they can see all the reports, filter them by some specific criteria and analyze the data to get the statistics that they desire.
+With this mobile application the user can perform the main functions related to him, such as: registration, login, send reports, consult the history of his reports and watch a map with the MDS. The application is then connected to the backend service which is the part of the architecture that handles all the main operations regarding the elaboration of data. In fact the backend is the core of the architetcure, it manages the incoming request and handles the interaction with the third party system for the plate recognition, this is fundamental because the authorities need to receive the plate number in order to immediately identify the right veichle. This is done by sending the picture taken by the user to this external service that finds the plate number in the image and send it back to the system as a string. Moreover the backend provides an interface that interacts with the cloud-based database in which the data will be saved and ultimately it provides the functions to compute (on request) the MDS and other useful metrics. The backend can also be configured to interact with the municipality service that offers data about accidents. In this case the backend compares the data sent with the data saved in the database and then tries to identify the potentially unsafe areas and then suggests possible interventions. The Web application takes advantage of the interactions with the remote database offered by the backend to provide a simple interface for the authorities in order to let them consult all the data. Via this web interface they can see all the reports, filter them by some specific criteria and analyze the data to get the statistics that they desire.
 
 
