Fix domain assumption and text assumption

--- a/RASD/Sections/2-Overall_Description/Assumptions_dependencies.tex
+++ b/RASD/Sections/2-Overall_Description/Assumptions_dependencies.tex
@@ -28,14 +28,16 @@ As far as the specification document is concerned, it is necessary to specify so
     \item {[D1]}  A picture taken with a smartphone is performed with a quality sufficient for the image recognition service to transcribe it;
     \item {[D2]}  The reported picture contains only the license plate of the car that committed the violation and not others;
     \item {[D3]}  The GPS information collected from the smartphone of a user has an accuracy of less than 5 meters;
-    \item {[D4]} The timestamp collected from the smartphone is synchronized with the CET standard;
-    \item {[D5]} The users can only report violations occured in Europe;
-    \item {[D6]} Reports are only sent through a secure connection channel;
-    \item {[D7]} The users reports all the violation that they detect;
-    \item {[D8]} The users send report containing correct information about the detected violation;
-    \item {[D9]} The municipality system stores correctly all the information concerning car accidents;
-    \item {[D10]} The municipality legacy system allows SafeStreet to retrieve information about the car accident among a certain area;
-    \item {[D11]} The image recognition service is able to detect and transcribe license plates;
+    \item {[D4]}  The timestamp collected from the smartphone is synchronized with the CET standard;
+    \item {[D5]}  The users can only report violations occured in Europe;
+    \item {[D6]}  Reports are only sent through a secure connection channel;
+    \item {[D7]}  The users reports all the violation that they detect;
+    \item {[D8]}  The users send report containing correct information about the detected violation;
+    \item {[D9]}  The municipality system stores correctly all the information concerning car accidents;
+    \item {[D10]} The municipality system allows SafeStreet to retrieve information about the car accident among a certain area;
+    \item {[D11]} The municipality system sends data accordingly to a common standard which is comprehensible by the SafeStreet system;
+    \item {[D12]} The image recognition service is able to detect and transcribe license plates.
 \end{itemize}
 
 
+%TODO add the acronyms of EU, CET and MDS
