--- a/RASD/Sections/2-Overall_Description/Constraints.tex
+++ b/RASD/Sections/2-Overall_Description/Constraints.tex
@@ -22,6 +22,10 @@ The user information is stored accordingly to the GDPR policies in order to guar
         \item Internet connectivity.
     \end{itemize}
 \end{itemize}
+
 \subsection{Interface to other applications}
-A certified external image recognition service deals with the car plate recognition through report's images.\newline
-Report's information are stored in a cloud database which guarantees data encryption and information retrieving through authentication.
+\begin{itemize}
+    \item A certified external image recognition service deals with the car plate recognition through report's images;
+    \item Report's information are stored in a cloud database which guarantees data encryption and information retrieving through authentication;
+    \item The municipality information center is periodically asked to provide data about the car accidents that happen among the municipality's territory.
+\end{itemize}
