--- a/RASD/config.tex
+++ b/RASD/config.tex
@@ -11,6 +11,7 @@
 \graphicspath{ {immagini/} }
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{enumerate}
 
 \usepackage[a4paper,width=150mm,top=30mm,bottom=30mm,left=30mm,right=30mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
