--- a/RASD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/RASD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -1,22 +1,22 @@
 \subsection{Definitions}
 \begin{itemize}
-  \item \textit{Most Dangerous Street}: Streets with the highest frequency of violation reports
+  \item \textit{Most Dangerous Streets}: Streets with the highest frequency of violation reports;
 \end{itemize}
 
 \subsection{Acronyms}
 \begin{itemize}
-  \item EU: European Union
-  \item CET: Central European Timezone
-  \item API: Application Programming Interface
-  \item HTTP: Hyper Text Transfer Protocol
-  \item GPS: Global Positioning System
-  \item GDPR: General Data Protection Regulation
+  \item EU: European Union;
+  \item CET: Central European Timezone;
+  \item API: Application Programming Interface;
+  \item HTTP: Hyper Text Transfer Protocol;
+  \item GPS: Global Positioning System;
+  \item GDPR: General Data Protection Regulation.
 \end{itemize}
 
 \subsection{Abbreviations}
 \begin{itemize}
-  \item {[Gn]}: n-th goal
-  \item {[Dn]}: n-th domain assumption
-  \item {[Rn]}: n-th functional requirements  
-  \item MDS: Most Dangerous Street
+  \item {[Gn]}: n-th goal;
+  \item {[Dn]}: n-th domain assumption;
+  \item {[Rn]}: n-th functional requirements;
+  \item MDS: Most Dangerous Street;
 \end{itemize}
