--- a/RASD/Sections/1-Introduction/Goals.tex
+++ b/RASD/Sections/1-Introduction/Goals.tex
@@ -1,22 +1,19 @@
 \begin{itemize}
-  \item {[G1]}: Allow a person to become a registered User after submitting his credentials for the registration to the service
-  \item {[G2]}: Allow the user to send a violation report consisting in a picture and some metadata
-    \begin{itemize}
-      \item {[G2.1]}: Allow the user to send along with the picture the plate number
-    \end{itemize}
-  \item {[G3]}: Allow the user to watch the history of his reports and their status
-  \item {[G4]}: Allow the user to watch on a map areas and streets with an high frequency of violations
+  \item {[G1]}: Allow a visitor to become a registered User after submitting his credentials for the registration to the service;
+  \item {[G2]}: Allow the user to send a violation report consisting in a picture and some metadata;
+  \item {[G3]}: Allow the user to watch the history of his reports and their status;
+  \item {[G4]}: Allow the user to watch on map areas and streets with an high frequency of violations;
   \begin{itemize}
-    \item {[G4.1]}: The user gets the latest violations near its current location 
-    \item {[G4.2]}: The user gets the latest violations near the location that he specifies
+    \item {[G4.1]}: The user gets the latest violations near its current location;
+    \item {[G4.2]}: The user gets the latest violations near the location that he specifies;
   \end{itemize} 
-  \item {[G.5]}: Allow the local system administrator of the police station to create accounts for the police technician by giving him an administrator account
-  \item {[G.6]}: Allow the authorities to visualize the reports submitted by the users
-  \item {[G.7]}: Allow the authorities to mine the data to make analisys and retrieve statistics
-  \item {[G.8]}: If the municipality offers a service that provides data about accidents then the system must be able to cross this data with its own data in order to identify possible unsafe areas
+  \item {[G.5]}: Allow the local system administrator of the police station to create accounts for the police technicians;
+  \item {[G.6]}: Allow the authorities to visualize the reports submitted by the users;
+  \item {[G.7]}: Allow the authorities to mine data to make analisys and retrieve statistics;
+  \item {[G.8]}: If the municipality offers a service that provides data about car accidents then the system must be able to cross this information with its owns data in order to identify possible unsafe areas;
   \begin{itemize}
-    \item {[G.8.1]}: In this case the system must be able to suggest possible interventions
-    \item {[G.8.2]}: The users must be able  watch this unsafe areas
-    \item {[G.8.3]}: The authorities must be able to consult the crossed data
+    \item {[G.8.1]}: In this case the system must be able to suggest possible interventions;
+    \item {[G.8.2]}: The users must be able watch this unsafe areas;
+    \item {[G.8.3]}: The authorities must be able to consult the crossed data.
   \end{itemize} 
 \end{itemize}
