--- a/RASD/Sections/1-Introduction/Scope.tex
+++ b/RASD/Sections/1-Introduction/Scope.tex
@@ -1,8 +1,8 @@
 \subsection{Description of the given problem}
-SafeStreets is a service that aims to improve the safety of the streets via the help of the users. They can notify violations or any illegal behaviour related to driving to authorities. In particular users can iteract with the service via an application that can be used to send the violation reports; the latters mainly consist in a picture, taken by the user, of the vehicle responsible of the violation, moreover users can send along with the picture location, date and additional information related to the infringement. The system also provides a Web interface that can be used by the authorities in order to check the violations recieved. It's important to note that the picture sent by the user must contain the car plate in order to let the police officers know which is the real vehicle that committed the violation. Another functionality of the application offers to both users and authorities the possibility to see areas/streets with the highest violations rates thanks to the data collected over time. As an advanced functionality the application can interact with services offered by the municipality; in particular if a service offers data related to accidents SafeStreets can cross this data with its own data in order to get a better idea of the potentially unsafe areas and therefore suggest some possible interventions. Ultimately the application will have to be scalable and easy to use in order to provide a fast and efficient utilization for users that see a violation and want to immediately report it.
+SafeStreets is a service that aims to improve the safety of the streets via the help of the users. They can notify violations or any illegal behaviour related to street parking to authorities. In particular users can iteract with the service via an application that can be used to send the violation reports; the latters mainly consist in a picture, taken by the user, of the vehicle responsible for the violation. Moreover users can send, along with the picture, location, date and additional information related to the infringement. The system also provides a Web interface that can be used by authorities in order to check the violations recieved. It is important to note that the picture sent by the user must contain the car plate in order to let police officers know which is the real vehicle that committed the violation. The application also offers the possibility to see areas/streets with the highest violations rates thanks to the data collected over time. As an advanced functionality the application can interact with services offered by the municipality; in particular if a service offers data related to car accidents, SafeStreets can cross this information with its owns, in order to get a better idea of the potentially unsafe areas and therefore suggest some possible interventions. Finally the application will have to be scalable and easy to use in order to provide a fast and efficient utilization for users that see a violation and want to report it immediately.
 
 \subsection{Current system}
-SafeStreets is a new service that it's entering the market right now,so all the architecture will have to be built from scratch. There aren't any legacy systems that needs to be integrated into the application with the exception of the third party services that offers some functionality required by the application (like Maps and plate recognition), those services will be better explained in the following paragraphs.
+SafeStreets is a new service that it is entering the market. There aren't any legacy systems that need to be integrated into the application, with the exception of the third party services that offers some functionality required by the application (like Maps and plate recognition). Those services will be better explained in the following paragraphs.
 
 
 \subsection{Goals}
