--- a/RASD/Sections/2-Overall_Description/Product_functions.tex
+++ b/RASD/Sections/2-Overall_Description/Product_functions.tex
@@ -1,22 +1,20 @@
 \subsection{Send a report}
-This is one of the most important function of the service. After the user has successfully registered/logged into the application he can choose to send a report of a violation to the officers. This is performed by taking a picture of the car that committed the violation. After the phone took the picture the application asks the user to add some textual information about the event. When this information are provided the application gathers some other data in order to have a correct and useful report. In particular it gets: 
+This is one of the most important function of the service. After the user has successfully registered/logged in to the application, he can choose to send a report of a violation to the officers. This is performed by taking a picture of the car that committed the violation. After the device took the picture the application asks the user to add some textual information about the event. When this information are provided the application gathers some other data in order to have a correct and useful report. In particular it gets: 
 \begin{itemize}
-  \item The data related to the user who wish to sent the report (User ID)
-  \item The local time and date gathered from the phone OS
-  \item The information about the street where the user took the picture. (Obtained by the GPS coordinates of the user)
+  \item The data related to the user who wish to send the report (User ID);
+  \item The local time and date gathered from the phone OS;
+  \item The information about the street where the user took the picture (Obtained by the GPS coordinates of the user).
 \end{itemize}
 
-% TODO: Check if these are good
-The user can also optionally add the car plate numbers and the name of the street in case, for example, the application misrecognized the street form the GPS coordinates. When all the necessary data are correctly gathered the report is sent to the backend system that will handle the request. The user can then consult the history section of the application to monitor the status of its report.
+The user can also optionally add the car plate numbers and the name of the street in case, for example, the application misrecognized the street from the GPS coordinates. When all the necessary data are correctly gathered, the report is sent to the backend system that will handle the request. The user can then consult the history section of the application to monitor the status of its report.
 
 \subsection{Receiving a report - Plate recognition}
-The specification document states that the license plate needs to be extracted from the image in order to save it as a correct report. So to extract the plate number from an image we thought to use an external service that does the job. This choice was made because, for this kind of application, an established and robust, high accuracy recognition service will certainly work better than a recognition system that we should build indoors from scratch only for this kind of purpose. Therefore the backend system runs a task that listens for new reports and as soon as it receives a new one it immediately sends the image contained in the message to the plate recognition service. After the elaboration, the service returns the response of the recognition algorithm that should contain the text transcription of the plate. Note that if for some reason (i.e. bad photo) the plate recognition system can't recognize the plate, the backend system will instead use the plate number inserted by the user if provided; if not provided the violation won't be associated to any plate number. After this recognition step the backend system will interact with the database to create a record that contains the plate number string (if recognized/provided) and all the other information sent in the report. Is important to highlight the fact that the photo won't be discarded after the recognition as they can be still used for legal purposes.
+The specification document states that the license plate needs to be extracted from the image in order to save it as a correct report. In order to extract the plate number from an image an external service is used. This choice was made because, for this kind of application, an established and robust, high accuracy recognition service will certainly work better than a recognition system that has to be built from scratch only for this kind of purpose. Therefore the backend system runs a task that listens for new reports and as soon as it receives a new one it immediately sends the image contained in the message to the plate recognition service. After the elaboration, the service returns the response of the recognition algorithm that should contain the text transcription of the plate. Note that if for some reason (i.e. bad picture) the plate recognition system can't recognize the plate, the backend system will instead use the plate number inserted by the user if provided; if not provided the violation won't be associated to any plate number. After this recognition step the backend system will interact with the database to create a record that contains the licence plate (if recognized/provided) and all the other information sent in the report. It is important to highlight the fact that the photo won't be discarded after the recognition as they can still be used for legal purposes.
 
 \subsection{Information mining}
-The system offers to both the users and the authorities the possibility to analyze the registered data although the level of visibility differs with respect to the utilizator. 
-The users can only see the streets with the highest frequency of violations. They can visualize those streets via the map present in the mobile application. The authorities instead have a wider accessibility to the data, in fact they can access to all the reports registered. Via the Web application they can perform queries on the database (only selection query) to mine the desired data and they can also compute statistics and metrics for a deeper analysis.
-With this role based approach the users will only see the MDS as we think this is the only information really useful for them, while for the authorities we leave access to all the reports as they can be used to mine all sorts of statistics useful for the police.
+The system offers to both users and authorities the possibility to analyze the registered data although the level of visibility differs with respect to the utilizator. 
+Users can only see the streets with the highest frequency of violations via the map present in the mobile application. Authorities instead have a wider access to data, that is to say they can access to all registered reports. Via the Web application they can also perform queries on the database (only selection queries) to mine the desired data and compute statistics and metrics for a deeper analysis. The role based approach has been designed in order to guarantee the privacy of car owners with respect to the users of the application. Therefore they will only be allowed to consult for the MDS.
 
 \subsection{Crossing data with the municipality}
-% TODO: to whom the suggestion is sent?
-The backend system offers the possibility to interact with an external service, offered by the municipality, that provides data regarding accidents happened in the municipality area. If this external service exists for the specified municipality than SafeStreets can compute a sort of "merge" between the data offered and the reports related to the municipality area in order to find out the potential unsafe areas. The system can then suggest possible interventions in order to improve the safety of this areas. Is important to note that the data offered by this service needs to be structured in a way that the backend system can recognize otherwise the information crossing won't provide any results.
+The backend system offers the possibility to interact with an external service, offered by the municipality, that provides data regarding car accidents happened in the municipality area. SafeStreets can define the potential unsafe areas of the municipality by merging car accidents data and viaolation reports stored by the application. The system can then suggest to the local system administrator possible interventions in order to improve the safety of this areas. It is important to note that the data offered by this service need to be structured in a standard way recognizable by the backend system, otherwise the information crossing will not provide any results.
+
