--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -30,12 +30,18 @@
   \input{Sections/2-Overall_Description/Product_functions.tex}
   \section{User Characteristics}
   \input{Sections/2-Overall_Description/User_characteristics.tex}
-  \section{Constraints}
-  \input{Sections/2-Overall_Description/Constraints.tex}
   \section{Assumptions and dependencies}
   \input{Sections/2-Overall_Description/Assumptions_dependencies.tex}
   
-
-\end{document}
+  \chapter{Specific requirements}
+  \section{External interface requirements}
+  \input{Sections/3-Specific_Requirements/External_interface_requirements.tex}
+  \section{Performance requirements}
+  \input{Sections/3-Specific_Requirements/Performance_requirements.tex}
+  \section{Design constraints}
+  \input{Sections/3-Specific_Requirements/Design_constraints.tex}
+  \section{Software system attributes}
+  \input{Sections/3-Specific_Requirements/Software_system_attributes.tex}
+  \end{document}
   
 
