--- a/RASD/Sections/1-Introduction/Purpose.tex
+++ b/RASD/Sections/1-Introduction/Purpose.tex
@@ -6,4 +6,8 @@ non-functional requirements, use cases and scenarios, constraints and assumption
 Overall the document is a useful guide for the developers that will have to follow
 and implement all the necessary requirements; nevertheless it is also a document
 that can be given to potential customers to get them an idea of what the software
-will be like.
+will be like.\newline
+The software features have been identified in the following list of goals.
+
+\subsection{Goals}
+\input{Sections/1-Introduction/Goals.tex}
