--- a/RASD/Sections/2-Overall_Description/Product_functions.tex
+++ b/RASD/Sections/2-Overall_Description/Product_functions.tex
@@ -1,5 +1,5 @@
 \subsection{Send a report}
-This is one of the most important function of the service. After the user has successfully registered/logged in to the application, he can choose to send a report of a violation to the officers. This is performed by taking a picture of the car that committed the violation. After the device took the picture the application asks the user to add some textual information about the event. When this information are provided the application gathers some other data in order to have a correct and useful report. In particular it gets: 
+This is one of the most important function of the service. After the user has successfully registered/logged in to the application, he can choose to send a report of a violation to the officers. This is performed by taking a picture of the car that committed the violation. After the device took the picture the application asks the user to choose from a list of common violations the category that best describes the event (i.e. No parking zone, Double parking). When this information is provided the application gathers some other data in order to have a correct and useful report. In particular it gets: 
 \begin{itemize}
   \item The data related to the user who wish to send the report (User ID);
   \item The local time and date gathered from the phone OS;
