--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -1,7 +1,8 @@
 \input{config.tex}
 
 \begin{document}
-    
+  %TODO: run a spellcheck
+  %TODO: check id SafeStreets is well written in all files (i.e. missing final s)
   % TODO: Fill title page
   \begin{titlepage}
     
@@ -36,6 +37,8 @@
   \chapter{Specific requirements}
   \section{External interface requirements}
   \input{Sections/3-Specific_Requirements/External_interface_requirements.tex}
+  \section{Functional Requirements}
+  \input{Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex}
   \section{Performance requirements}
   \input{Sections/3-Specific_Requirements/Performance_requirements.tex}
   \section{Design constraints}
