Add some scenarios

--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
@@ -1,2 +1,5 @@
 \subsection{Scenarios}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex}
+
+\subsection{Use cases}
+\input{Sections/3-Specific_Requirements/Functional_requirements/Use_cases.tex}
