--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
@@ -5,12 +5,8 @@ John is a very sportsman person who likes to ride his bicycle a lot. So as every
 % TODO: check grammar
 Albert's son Freddy has recently been operated to his leg so the municipality released to him the pass that allows Albert to park his car in places reserved for people with disabilities. Albert has to bring Freddy to the doctor for some checks every week. Sometimes he manages to find the parking spot in front of the hospital reserved for people with disabilities free but some other times the place is occupied by some other car that does not have the pass. When this happens he needs to find another parking spot which may not be close to the hospital and therefore he his forced to make his son walk to the centre which can be dangerous as he has just been operated. After some weeks in this conditions Albert decides to use the SafeStreets service in order to prove if the service can be really useful or not. Therefore he sends a report every time he finds this kind of situation. After some weeks he notices that the parking spot is either free or regularly occupied indeed he checks his report history to find out that all of his requests have been take into account by the police.
 
-
-% tizio che si vede il posto disabili sempre occupato da altr macchine senza tiket
-
 \subsubsection{Scenario 3}
 Like every morning Kevin wakes up to go to work. Around 7 o'clock he leaves home to get to the parking slot where he left his car yesterday. When he arrives he notices that the car parked behind his has crushed into his rear bumper leaving a noticeable dent. He does not have time to call the police because he is in a hurry for an important meeting at work so he decides to immediately send a crush report by taking a picture of the unpleasant event, after that he rapidly gets on his car in order to arrive in time at work. When he returns from work he opens up the SafeStreets app once again to check the status of his report. Fortunately he finds out that his request has been taken into account by a local officer.
-
 
 \subsubsection{Scenario 4}
 Marco has been invited to his friend Luigi's graduation party organized to celebrate his newly graduated master degree in Computer Science and Engineering obtained at Politecnico di Milano. Since he lives in a small city with very limited public transportation solutions to go to Milano he decides to go with his car to event. When he is almost near to the designated place he starts to think where to park his car. After some time he remembers that Luigi told him to download the SafeStreets app in order to check which are the most unsafe streets in the area. He stops for a second and opens the mobile application, then he navigates to the map section and finds on the map the location where the place is held.  The application then enlightens the most dangerous streets near this location so that Marco can avoid parking his car there.
@@ -18,4 +14,8 @@ Marco has been invited to his friend Luigi's graduation party organized to celeb
 \subsubsection{Scenario 5}
 Leon is a newly hired police technician for the Berlin police department. For his first days of work the corporal assigned to him some routine work mainly represented as patrols or giving tickets. In order to check where he needs to go today he logs in with his credentials in to the SafeStreets Web application from his computer located in the police station. He then consults the new violation reports submitted in the city in order to find out their locations. 
 
-\subsubsection{}
+\subsubsection{Scenario 6}
+Daniele is the local system administrator of the Genova police department and he is responsible of dispatching the patrols. He decides that he wants to schedule the officers in a more intelligent way. To do that he consults the SafeStreets report database by logging in the web application. He would like to send the more experienced officers to areas in which there is a high number of violations categorized as "crash violations" whereas he would like to assign regular officers to other streets with an high frequency of violation of any category. In order to find out those streets he write down a query and execute it via the web application; after some seconds the interface displays the desired results, therefore he is able to schedule the patrols as he wants. Daniele would also like to communicate to all the officers which are the 10 cars that committed the highest number of violations in the city. To do that he once again performs a query on the SafeStreets web application searching for the 10 car plates with the highest rate of violations.
+
+
+% operatore pubblico che chiede per gli interventi suggeriti dal sistema (advanced function)
