--- a/RASD/config.tex
+++ b/RASD/config.tex
@@ -12,6 +12,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{enumerate}
+\usepackage{array}
+\usepackage{tabularx}
 
 \usepackage[a4paper,width=150mm,top=30mm,bottom=30mm,left=30mm,right=30mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
